--- a/Back End/Certify_Service/Dependencies.toml
+++ b/Back End/Certify_Service/Dependencies.toml
@@ -313,6 +313,14 @@ modules = [
 ]
 
 [[package]]
+org = "ballerinax"
+name = "mysql.driver"
+version = "1.6.0"
+modules = [
+	{org = "ballerinax", packageName = "mysql.driver", moduleName = "mysql.driver"}
+]
+
+[[package]]
 org = "janithhathnagoda"
 name = "Certify_Service"
 version = "0.1.0"
@@ -321,7 +329,8 @@ dependencies = [
 	{org = "ballerina", name = "sql"},
 	{org = "ballerina", name = "time"},
 	{org = "ballerinai", name = "observe"},
-	{org = "ballerinax", name = "mysql"}
+	{org = "ballerinax", name = "mysql"},
+	{org = "ballerinax", name = "mysql.driver"}
 ]
 modules = [
 	{org = "janithhathnagoda", packageName = "Certify_Service", moduleName = "Certify_Service"}
