--- a/Identity_Service/Ballerina.toml
+++ b/Identity_Service/Ballerina.toml
@@ -11,4 +11,4 @@ observabilityIncluded = true
 groupId = "mysql"
 artifactId = "mysql-connector-java"
 version = "8.0.26"
-path= "C:/mysql-connector-j-8.2.0.jar"
+# path= "C:/mysql-connector-j-8.2.0.jar"
