--- a/police_check_service/Ballerina.toml
+++ b/police_check_service/Ballerina.toml
@@ -1,6 +1,6 @@
 [package]
-org = "janithhathnagoda"
-name = "Certify_Service"
+org = "ravinduthiunuwan"
+name = "police_check_service"
 version = "0.1.0"
 distribution = "2201.8.4"
 
@@ -11,4 +11,6 @@ observabilityIncluded = true
 groupId = "mysql"
 artifactId = "mysql-connector-java"
 version = "8.0.26"
-# path= "C:/mysql-connector-j-8.2.0.jar"
+
+[[platform.java11.dependency]]
+# path = "/path/to/mysql/driver.jar”
