--- a/Back End/Slack_Service/Ballerina.toml
+++ b/Back End/Slack_Service/Ballerina.toml
@@ -1,10 +1,8 @@
 [package]
 org = "janithhathnagoda"
-name = "Certify_Service"
+name = "Slack_Service"
 version = "0.1.0"
 distribution = "2201.8.4"
 
 [build-options]
 observabilityIncluded = true
-
-
