--- a/Front End/package.json
+++ b/Front End/package.json
@@ -10,10 +10,14 @@
     "axios": "^1.6.5",
     "dotenv": "^16.3.1",
     "react": "^18.2.0",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.2",
     "react-scripts": "^5.0.1",
+    "react-spinners": "^0.13.8",
+    "sweetalert2": "^11.10.3",
+    "tailwindcss": "3.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
