slack service update

--- a/Back End/Slack_Service/Dependencies.toml
+++ b/Back End/Slack_Service/Dependencies.toml
@@ -85,6 +85,10 @@ dependencies = [
 	{org = "ballerina", name = "time"},
 	{org = "ballerina", name = "url"}
 ]
+modules = [
+	{org = "ballerina", packageName = "http", moduleName = "http"},
+	{org = "ballerina", packageName = "http", moduleName = "http.httpscerr"}
+]
 
 [[package]]
 org = "ballerina"
@@ -93,9 +97,6 @@ version = "1.6.0"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"},
 	{org = "ballerina", name = "lang.value"}
-]
-modules = [
-	{org = "ballerina", packageName = "io", moduleName = "io"}
 ]
 
 [[package]]
@@ -323,7 +324,7 @@ org = "janithhathnagoda"
 name = "Slack_Service"
 version = "0.1.0"
 dependencies = [
-	{org = "ballerina", name = "io"},
+	{org = "ballerina", name = "http"},
 	{org = "ballerina", name = "time"},
 	{org = "ballerinai", name = "observe"},
 	{org = "ballerinax", name = "slack"}
