--- a/Front End/conf/nginx.conf
+++ b/Front End/conf/nginx.conf
@@ -1,18 +1,22 @@
 server {
-    listen 80;
+    listen 8080;
+
     server_name localhost;
 
+    sendfile on;
+
+    root /usr/share/nginx/html;
+    index  index.html index.htm;
+
     location / {
-        root /usr/share/nginx/html;
-        index index.html index.htm;
         try_files $uri $uri/ /index.html;
     }
 
     location /assets {
-        alias /usr/share/nginx/html/assets;
-        try_files $uri $uri/ =404;
-        add_header Cache-Control "public, max-age=31536000";
+        try_files $uri $uri/ /= 404;
+        add_header Cache-Control max-age=31536000;
     }
 
     error_page 404 /index.html;
+
 }
