--- a/Front End/conf/Dockerfile
+++ b/Front End/conf/Dockerfile
@@ -1,15 +1,19 @@
-# Build Stage
-FROM node:14 as build-stage
+FROM node:18-slim as build-stage
 WORKDIR /Front End
 COPY package.json ./
 RUN npm install
 COPY . .
+
 RUN npm run build
 
-# Production Stage
-FROM nginx:alpine
-RUN rm -rf /usr/share/nginx/html/*
-COPY --from=build-stage /Front End/build /usr/share/nginx/html
-COPY nginx.conf /etc/nginx/conf.d/default.conf
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+FROM nginxinc/nginx-unprivileged:latest
+
+RUN rm /etc/nginx/conf.d/default.conf
+
+COPY conf/nginx.conf /etc/nginx/conf.d/
+
+COPY --from=build-stage /Front End/dist /usr/share/nginx/html
+USER 10014
+EXPOSE 8080 
+
+CMD [ "nginx" , "-g" , "daemon off;" ]
