--- a/Front End/package.json
+++ b/Front End/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@asgardeo/auth-react": "^4.0.0",
+    "@coreui/coreui": "^4.3.2",
+    "@coreui/react": "^4.11.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,7 +13,6 @@
     "bootstrap": "^5.3.2",
     "dotenv": "^16.3.1",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.2",
