--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@asgardeo/auth-react": "^4.0.0",
-    "@coreui/coreui": "^4.3.2",
+    "@coreui/coreui": "^4.3.0",
     "@coreui/react": "^4.11.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -12,6 +12,7 @@
     "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
     "dotenv": "^16.3.1",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
