--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -12,16 +12,16 @@
     "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
     "dotenv": "^16.3.1",
-    "formik": "^2.4.5",
     "moment": "^2.30.1",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.10.0",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.2",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^2.1.4",
-    "yup": "^1.3.3"
+    "react-spinners": "^0.13.8",
+    "sweetalert2": "^11.10.3",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
