--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -6,12 +6,14 @@
     "@asgardeo/auth-react": "^4.0.0",
     "@coreui/coreui": "^4.3.0",
     "@coreui/react": "^4.11.1",
+    "@hookform/resolvers": "^3.3.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
     "dotenv": "^16.3.1",
+    "formik": "^2.4.5",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
@@ -21,6 +23,7 @@
     "react-router-dom": "^6.21.2",
     "react-scripts": "^5.0.1",
     "react-spinners": "^0.13.8",
+    "react-toastify": "^10.0.4",
     "sweetalert2": "^11.10.3",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.3"
