--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.2",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.8.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.4",
     "sweetalert2": "^11.10.3",
